--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,27 +1,48 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CFApp</title>
+    <title>CF_App</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
   </head>
 
   <body>
 
-	  <nav>
-			<ul>
-				<li>Home</li>
-				<li>About</li>
-				<li>Contact</li>
-			</ul>
+	  <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">Frog Store</a>
+        </div>
+        <div class="collapse navbar-collapse" id="navbar-collapse">
+    			<ul class="nav navbar-nav navbar-right">
+    				<li><%= link_to "About", static_pages_about_url%></li>
+    				<li><%= link_to "Contact", static_pages_contact_url%></li>
+    			</ul>
+        </div><!-- /.navbar-collapse -->
+      </div>
 		</nav>
+    <div class="spacer"></div>
 
     <%= yield %>
 
-    <footer>
-    	&copy; 2017 KKulcsar
+    <footer class="navbar navbar-fixed-bottom">
+      <div class="container">
+        <span class="glyphicon glyphicon-copyright-mark"></span> 2017 K Krisztian
+      </div>
     </footer>
 
   </body>
