--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,11 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<div class="row">
+  <div class="col-xs-12 col-md-10 col-md-offset-1 text-center">
+    <h1>About us</h1>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12 col-md-8 col-md-offset-2">
+    <p>we have to sdsdpsdusdt some text here or a map or a contact form we have to put some text here or a map or a csdsdsontact form we havewewew to putwewe some textwewewe here orwewe a map or a contact form we have to put sodsdsdme text here or a map or a contact form we have to put some text here or a map or a contact form</p>
+    <p>we have to put# some text here or a map or a contact form we have to put some text here or a map or a contact  form we have to put some text  here or a map or a contact form we have to put_ some text here  or a map or a. contact form we have to put some text here or a map or a contact form</p>
+  </div>
+</div>
