--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,3 +16,24 @@
 .spacer {
 	padding-top: 40px;
 }
+
+.product {
+	background-color: #fff;
+	border: 1px solid #ccc !important;
+	border-radius: 5px;
+	box-shadow: 2px 2px 5px #ccc;
+	margin-left: 20px;
+	width: 250px;
+}
+
+p {
+	margin: 33px 10px 33px 10px;
+}
+
+h1 {
+	margin-bottom: 30px;
+}
+
+.bg-white {
+	background-color: #fff;
+}
